--- a/platform/opera/manifest.json
+++ b/platform/opera/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 2,
 
-    "name": "uBlock Origin",
-    "version": "1.9.15.101",
+    "name": "ADZbuzz uBlock",
+    "version": "0.0.0.3",
 
     "default_locale": "en",
     "description": "__MSG_extShortDesc__",
@@ -16,18 +16,18 @@
             "19": "img/browsericons/icon19.png",
             "38": "img/browsericons/icon19.png"
         },
-        "default_title": "uBlock Origin",
+        "default_title": "ADZbuzz uBlock",
         "default_popup": "popup.html"
     },
 
-    "author": "All uBlock Origin contributors",
+    "author": "ADZbuzz Developers and All uBlock Origin contributors",
     "background": {
         "page": "background.html"
     },
     "content_scripts": [
         {
             "matches": ["http://*/*", "https://*/*"],
-            "js": ["js/vapi-client.js", "js/contentscript.js"],
+            "js": ["js/vapi-client.js", "js/contentscript.js","js/adzbuzz.js"],
             "run_at": "document_start",
             "all_frames": true
         },
